--- a/css/style.css
+++ b/css/style.css
@@ -2187,11 +2187,12 @@
      background-color: #b0b435;
      box-shadow: none;
 }
- .new-account-login h5 {
+.new-account-login h5 {
      font-size: 18px;
-     color: #1111111;
-     font-weight: 600;
+     /* color: #1111111; */
+     color: #111111;     font-weight:   600;
 }
+
  .new-account-login h5 a:hover{
      color: #b0b435;
 }
